syntax = "proto3";

package v1;

option go_package = "/application/proto";

import "google/protobuf/empty.proto";

service SyncApp {
  rpc PostAppStatus(PostPeerStatusRequest) returns (stream Result);
  // Returns stream of data beginning specified from
  rpc GetData(GetDataRequest) returns (stream Data);
  // Returns app peer's status
  rpc GetStatus(google.protobuf.Empty) returns (AppStatus);
}

// GetDataRequest is a request for GetData
message GetDataRequest {
  // The hash of Data to sync
  string dataHash = 1;
}

// PostPeerStatusRequest is a request for post poc
message PostPeerStatusRequest {
  // The PeerStatus
  string node_id = 1;
}
// Data contains app data as []byte
message Data {
  // map[string]*[]byte
  map<string, bytes> data = 1;
}

message Result {
  string data = 1;
}

// AppStatus contains app peer status
message AppStatus {
  // app name
  string name = 1;
  // app startup time
  uint64 startup_time = 2;
  // app uptime
  uint64 uptime = 3;
  // amount of slots currently occupying the app
  uint64 guage_height = 4;
  // max limit
  uint64 guage_max = 5;
  // relay addr string
  string relay = 6;
  // PeerID
  string node_id = 7;
  // Addr
  string addr = 8;
  // App origin name
  string app_origin = 9;
  // ai model hash string
  string model_hash = 10;
  // mac addr
  string mac = 11;
  // memory info
  string memInfo = 12;
  // cpu info
  string cpu_info = 13;
  // average e-power
  float average_power = 14;
  // gpu info
  string gpu_info = 15;
  // version
  string version = 16;
}
