syntax = "proto3";

package v1;

option go_package = "/relay/proto";

service Alive {
  rpc Hello(AliveStatus) returns (AliveStatusResp);
}

message AliveStatus {
  string name = 1;
  // app startup time
  uint64 startup_time = 2;
  // app uptime
  uint64 uptime = 3;
  // amount of slots currently occupying the app
  uint64 guage_height = 4;
  // max limit
  uint64 guage_max = 5;
  // relay addr string
  string relay = 6;
  // app origin name string
  string app_origin = 7;
  // ai model hash string
  string model_hash = 8;
  // mac addr
  string mac = 9;
  // memory info
  string memInfo = 10;
  // cpu info
  string cpu_info = 11;
  // average e power value
  float average_power = 12;
  // gpu info
  string gpu_info = 13;
  // version
  string version = 14;
}

message AliveStatusResp {
  bool success = 1;
  string discovery = 2;
}